--- a/app/views/apparels/index.html.erb
+++ b/app/views/apparels/index.html.erb
@@ -7,19 +7,17 @@
             <div class="panel-heading">
                 <h3 class="panel-title">Apparel</h3>
                 <div class="pull-right">
-                  <div class="invisible">
                     <button class="btn btn-default btn-xs btn-filter"><span class="glyphicon glyphicon-filter"></span> Filter</button>
-                  </div>
                 </div>
             </div>
             <table class="table">
                 <thead>
                     <tr class="filters">
-                        <th><input type="text" class="form-control" placeholder="ID" ></th>
-                        <th><input type="text" class="form-control" placeholder="Sex" ></th>
-                        <th><input type="text" class="form-control" placeholder="Article" ></th>
-                        <th><input type="text" class="form-control" placeholder="Size" ></th>
-                        <th><input type="text" class="form-control" placeholder="Status" ></th>
+                        <th><input type="text" class="form-control" placeholder="ID" disabled></th>
+                        <th><input type="text" class="form-control" placeholder="Sex" disabled></th>
+                        <th><input type="text" class="form-control" placeholder="Article" disabled></th>
+                        <th><input type="text" class="form-control" placeholder="Size" disabled></th>
+                        <th><input type="text" class="form-control" placeholder="Status" disabled></th>
                     </tr>
                 </thead>
                 <tbody>
