--- a/app/assets/stylesheets/utilities.css.scss
+++ b/app/assets/stylesheets/utilities.css.scss
@@ -33,13 +33,18 @@
   border-color: #500000;
 }
 
+.btn-primary {
+  color: #fff;
+  background-color: #337ab7;
+  border-color: #2e6da4;
+}
 
 .btn-btn-primary3{
   margin: 0 auto;
 }
 
 
-.btn-btn-primary1, .btn-btn-primary2, .btn-btn-primary3 {
+.btn-btn-primary1, .btn-btn-primary2, .btn-btn-primary3, .btn-primary {
   background: #500000;
   background-image: -webkit-linear-gradient(top, #480000, #4B0000);
   background-image: -moz-linear-gradient(top, #480000, #4B0000);
@@ -55,7 +60,7 @@
   text-decoration: none;
 }
 
-.btn-btn-primary1:hover, .btn-btn-primary2:hover, btn-btn-primary3:hover {
+.btn-btn-primary1:hover, .btn-btn-primary2:hover, .btn-btn-primary3:hover, .btn-primary {
   background: #500000;
   background-image: -webkit-linear-gradient(top, #480000, #500000);
   background-image: -moz-linear-gradient(top, #480000, #500000);
