--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,5 +1,5 @@
 <h2>Resend confirmation instructions</h2>
-
+<div class="form">
 <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
 
@@ -12,5 +12,5 @@
     <%= f.submit "Resend confirmation instructions" %>
   </div>
 <% end %>
-
+</div>
 <%= render "devise/shared/links" %>
